projects/compiler/test/parser/import_error_list_no_from.out
Error at %FILE_NAME%:1:13
Unexpected token 'string', expected one of ',', 'from':
  |  import a, b "./abc"
                 ^